; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_multi_physical_planner.c_BuildBaseConstraint.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_multi_physical_planner.c_BuildBaseConstraint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BTLessEqualStrategyNumber = common dso_local global i32 0, align 4
@BTGreaterEqualStrategyNumber = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @BuildBaseConstraint(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  store i32* null, i32** %3, align 8
  store i32* null, i32** %4, align 8
  store i32* null, i32** %5, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = load i32, i32* @BTLessEqualStrategyNumber, align 4
  %8 = call i32* @MakeOpExpression(i32* %6, i32 %7)
  store i32* %8, i32** %4, align 8
  %9 = load i32*, i32** %2, align 8
  %10 = load i32, i32* @BTGreaterEqualStrategyNumber, align 4
  %11 = call i32* @MakeOpExpression(i32* %9, i32 %10)
  store i32* %11, i32** %5, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = call i32* @make_and_qual(i32* %12, i32* %13)
  store i32* %14, i32** %3, align 8
  %15 = load i32*, i32** %3, align 8
  ret i32* %15
}

declare dso_local i32* @MakeOpExpression(i32*, i32) #1

declare dso_local i32* @make_and_qual(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
